style.css
/* ... */
.contact-me-container li {
  list-style: none;
}

.error {
  color: red;
}

/*
desktop version start here;
*/

/*
media queries Below
*/

@media (min-width: 768px) {
  /*
  navigation bar
  */

  .nav-icon-menu,
  #exit {
    display: none;
  }

  .nav-my-logo {
    flex: 1 1 auto;
    box-sizing: border-box;
    font-size: 1.5rem;
  }

  .nav-menu-button {
    display: flex;
    justify-content: flex-end;
  }

  .nav-list-top {
    display: flex;
    flex: 1 1 auto;
    max-width: 258px;
    list-style: none;
    justify-content: space-evenly;
    padding-left: 0;
    box-sizing: border-box;
  }

  .nav-list__options {
    color: #344563;
    font-weight: 500;
    font-size: 1rem;
  }

  .nav-flex-container {
    top: 0;
    height: 72px;
    position: fixed;
    width: 100%;
  }

  /*
  header and welcome text
  */

  .header-text {
    border-radius: 0 0 0 100px;
    background-image: url('./img/desktop/Header\ bgdesktop-header-background.svg');
    background-size: 100%;
    background-repeat: no-repeat;
    padding-left: 18%;
    padding-right: 18%;
    padding-bottom: 10%;
    margin-top: 72px;
  }

  .header-text h1 {
    margin-bottom: 2%;
    font-size: 3.12rem;
  }

  .header-text .description {
    font-size: 1.25rem;
    padding-bottom: 2%;
    margin-top: 0;
  }

  .social-icon-container {
    width: auto;
  }

  .about-me-icons {
    width: fit-content;
  }

  /*
  Job Cards Section
  */

  .cards-container {
    padding-left: 10%;
    padding-right: 10%;
  }

  .card-element {
    flex-direction: row;
    padding: 2%;
  }

  .card-reverse {
    flex-direction: row-reverse;
  }

  .card-element img {
    flex: 1;
  }

  .preview-picture:hover {
    filter: drop-shadow(8px 8px 10px #6070ff);
    transition: 25ms;
    transform: scale(1.05);
  }

  .text-box {
    flex: 1;
    padding-left: 2%;
    padding-right: 2%;
    box-sizing: border-box;
  }

  .technology-tags {
    width: fit-content;
    gap: 5%;
  }

  .technology-tags li {
    border-radius: 8px;
    padding: 5%;
    padding-left: 9%;
    padding-right: 9%;
  }

  .project-frame {
    padding-right: 30%;
    box-sizing: border-box;
  }

  .See-project-button {
    width: auto;
    padding-left: 2%;
    padding-right: 2%;
    font-weight: 500;
  }

  /* About Myself section */

  .about-me-wrap {
    border-radius: 0 100px 0 0;
    flex-direction: row;
    padding-left: 10%;
    padding-right: 10%;
  }

  .about-me-wrap div {
    flex: 1;
    padding-right: 3%;
  }

  .about-description-container h2 {
    margin-bottom: 0;
    font-size: 3.2rem;
  }

  .about-description-container p {
    margin-top: 0;
    font-size: 1.2rem;
  }

  .about-description-container .getResumeButton {
    margin-top: 2%;
    font-weight: 500;
    border-radius: 8px;
    border: 1px solid #6070ff;
    font-size: 1rem;
    padding: 1%;
    padding-left: 2%;
    padding-right: 2%;
    width: fit-content;
  }

  .skill-section + .skill-section {
    border-bottom: 2px solid #dfe1e6;
  }

  .skill-section.no-dropped {
    height: 100%;
    box-sizing: border-box;
    padding-top: 5%;
    padding-bottom: 5%;
  }

  .skill-section ul {
    display: flex;
    flex-direction: row;
    gap: 2%;
    padding-right: 35%;
  }

  .skill-section.no-dropped ul {
    display: none;
  }

  .skill-section li {
    display: flex;
    flex-direction: column;
    align-items: baseline;
  }

  hr {
    border: 1px solid black;
  }

  /*
  Desktop Contact me version
  */

  .contact-me-container {
    background-image: url(./img/desktop/desktop-footer-bakcground/contact\ form\ background\ shapes.svg);
    background-size: 100%;
    padding-left: 29%;
    padding-right: 29%;
    padding-top: 10%;
    padding-bottom: 5%;
  }

  #contac-form {
    padding-left: 5%;
    padding-right: 5%;
  }

  #contac-form ul {
    display: flex;
    flex-direction: column;
  }

  #get-in-touch {
    justify-self: center;
    margin-left: auto;
    margin-right: auto;
    font-weight: 500;
    border-radius: 8px;
  }

  /*
  Desktop PopUP start----------------
  */
  .portfolio-pupUp-backgroundOpen {
    padding-top: 4%;
    padding-left: 9.8%;
    padding-right: 9.8%;
    box-sizing: border-box;
  }

  .porfolio_pop-up_main-container {
    padding-top: 5%;
    padding-left: 2%;
    padding-right: 2%;
    width: 79.9vmin;
    height: 88vmin;
    margin-left: auto;
    margin-right: auto;
  }

  .pop-up_project-frame h2 {
    font-size: 1.5vmin;
    margin-top: 0;
    margin-bottom: 0;
  }

  .porfolio_pop-up_header .pop-up-top h2 {
    font-size: 2.5vmin;
  }

  #portfolioPopUpCloseBtn {
    width: fit-content;
  }

  #portfolioPopUpCloseBtn img {
    width: 1.75vmin;
  }

  .pop-up_project-frame {
    width: 25%;
  }

  .pop-up_project-frame li {
    font-size: 1vmin;
  }

  .portfolio_pop-up_container2 {
    display: flex;
    box-sizing: border-box;
  }

  .preview {
    max-width: 100%;
    width: fit-content;
    max-height: 44.39vh;
    margin-left: auto;
    margin-right: auto;
  }

  .portfolio_pop-up_text-container {
    font-size: 1.4vmin;
    width: 67.3%;
    box-sizing: border-box;
  }

  .pop-up-skills-container {
    width: 32.7%;
    padding: 2%;
    box-sizing: border-box;
  }

  .pop-up-skills-container .technology-tags li {
    padding: 2%;
    padding-left: 5%;
    padding-right: 5%;
  }

  .pop-up-skills-container button a {
    font-size: 1.12vmin;
  }

  .portfolio_pop-up_container2 .technology-tags {
    width: 100%;
    margin-right: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
  }

  /*
  Desktop PopUP start----------------
  */
}

/*
Media Queries upwards
*/

/*
hover effets
*/

.nav-menu-button img:hover,
.nav-menu-button li:hover {
  filter: drop-shadow(8px 8px 10px #6070ff);
  transition: 50ms;
  transform: scale(1.1);
}

#get-in-touch:hover {
  color: #fff;
  background-color: #4053fc;
}

button:hover {
  color: #fff;
  background-color: #4053fc;
}
/* ... */

